# puppet-barbican

./: .fixtures.yml  .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.md  metadata.json  setup.cfg
examples/: init.pp
manifests/: api.pp  audit.pp  client.pp  config.pp  cors.pp  db.pp  deps.pp  healthcheck.pp  init.pp  logging.pp  params.pp  policy.pp  quota.pp  retry_scheduler.pp  worker.pp
manifests/api/: logging.pp
manifests/db/: mysql.pp  postgresql.pp  sync.pp
manifests/keystone/: auth.pp  authtoken.pp  notification.pp
manifests/plugins/: dogtag.pp  kmip.pp  p11_crypto.pp  simple_crypto.pp  vault.pp
manifests/wsgi/: apache.pp  uwsgi.pp
releasenotes/notes/: add-hsm-parameters-dd1d97ebc6034292.yaml  add-multiple-backend-config-158138b82dfd3dca.yaml  add-pkcs11-options-dd38e8f087888595.yaml  add-support-for-token-label-and-serial-5b6ec6acc7f9d791.yaml  add_vault_plugin-ba10e2519dbf247c.yaml  add_watch_log_file-option-921e57c03a0b459e.yaml  apache-headers-8e291ff07e486d85.yaml  api-limit_paging-9994bae6e53697ca.yaml  api_paste_ini-separator-427d9eacb371d231.yaml  audit-9145ddba16d96c5d.yaml  authtoken-service_token_roles-e391d38e42fac7f0.yaml  barbican-base-opts-5d7598b51270cc64.yaml  barbican-remove-deprecated-325f3a73e4f58e7b.yaml  barbican-worker_workers-3a0a5344c5290df5.yaml  bug-1956397-5286a7662b8b8cb6.yaml  cleanup-retry-scheduler-opts-from-api-e66319aa480ad321.yaml  configure_service-61ed7d0299efa5ab.yaml  cors-0b6f3af84fffbdee.yaml  (+60 more)
spec/: shared_examples.rb  spec_helper.rb  spec_helper_acceptance.rb
tests/: init.pp
(+47 files in other folders)
