[metadata]
name = puppet-barbican
summary = Puppet module for Barbican
description-file =
    README.md
author = OpenStack Contributors
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/puppet-openstack-guide
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
